registration, login, resend code

--- a/app/design/frontend/rwd/sh_telesign/layout/local.xml
+++ b/app/design/frontend/rwd/sh_telesign/layout/local.xml
@@ -1,21 +1,21 @@
 <?xml version="1.0"?>
 <layout version="0.1.0">
     <customer_account_create>
+        <reference name="head">
+            <action method="addItem"><type>skin_js</type><name>js/phone.js</name></action>
+            <action method="addItem"><type>skin_js</type><name>js/jquery.maskedinput.js</name></action>
+        </reference>
         <block type="customer/form_register" name="customer_form_register" template="persistent/customer/form/register.phtml">
             <action method="setShowAddressFields">
                 <param>true</param>
             </action>
-            <block type="customer/form_register" name="customer.form.register.telesign.address.full" template="persistent/customer/form/address/full.phtml"/>
+            <block type="customer/form_register" name="customer.form.register.telesign.address.full" template="persistent/customer/form/address/full.phtml">
+                <block type="customer/form_register" name="customer.form.register.telesign.address.telephone" template="persistent/customer/form/address/telephone.phtml"/>
+            </block>
             <block type="customer/form_register" name="customer.form.register.telesign.address.telephone" template="persistent/customer/form/address/telephone.phtml"/>
             <block type="customer/form_register" name="customer.form.register.telesign.type" template="persistent/customer/form/telesign/type.phtml"/>
         </block>
     </customer_account_create>
-    <sh_telesign_verify_index>
-        <update handle="page_one_column"/>
-        <reference name="content">
-            <block type="sh_telesign/verify" name="telesign.verify.code" template="customer/address/telesign/verify.phtml"/>
-        </reference>
-    </sh_telesign_verify_index>
     <sh_telesign_verify_resendform>
         <reference name="head">
             <action method="addItem"><type>skin_js</type><name>js/default.js</name></action>
@@ -25,4 +25,13 @@
             <block type="sh_telesign/resend" name="telesign.resend.verify.code.form" template="customer/address/telesign/resend.phtml"/>
         </reference>
     </sh_telesign_verify_resendform>
+    <customer_account_login>
+        <reference name="head">
+            <action method="addItem"><type>skin_js</type><name>js/default.js</name></action>
+        </reference>
+        <update handle="page_one_column"/>
+            <block type="customer/form_login" name="customer_form_login" template="persistent/customer/form/login.phtml">
+                <block type="sh_telesign/verify" name="telesign.verify.code" template="customer/address/telesign/verify.phtml"/>
+            </block>
+    </customer_account_login>
 </layout>
