--- a/app/design/frontend/rwd/sh_telesign/template/customer/address/telesign/resend.phtml
+++ b/app/design/frontend/rwd/sh_telesign/template/customer/address/telesign/resend.phtml
@@ -3,6 +3,12 @@
     <div class="fieldset">
         <h2 class="legend"><?php echo $this->__('Resend Verify Code') ?></h2>
         <ul class="form-list">
+            <li>
+                <label for="email" class="required"><em>*</em><?php echo $this->__('Email Address') ?></label>
+                <div class="input-box">
+                    <input type="email" autocapitalize="off" autocorrect="off" spellcheck="false" name="username" id="email" class="input-text required-entry validate-email" />
+                </div>
+            </li>
             <li class="fields">
                 <div class="field">
                     <div class="input-box">
