--- a/app/design/frontend/rwd/sh_telesign/template/persistent/customer/form/address/telephone.phtml
+++ b/app/design/frontend/rwd/sh_telesign/template/persistent/customer/form/address/telephone.phtml
@@ -2,7 +2,7 @@
     <div class="field">
         <label for="telesign_telephone" class="required"><em>*</em><?php echo $this->__('Telephone') ?></label>
         <div class="input-box">
-            <input type="tel" name="telesign_telephone" id="telesign_telephone" value="<?php echo $this->escapeHtml($this->getFormData()->getTelephone()) ?>" title="<?php echo $this->quoteEscape($this->__('Telephone')) ?>" class="input-text <?php echo $this->helper('customer/address')->getAttributeValidationClass('telephone') ?>" />
+            <input type="tel" name="telephone" id="telephone" value="<?php echo $this->escapeHtml($this->getFormData()->getTelephone()) ?>" title="<?php echo $this->quoteEscape($this->__('Telephone')) ?>" class="input-text <?php echo $this->helper('customer/address')->getAttributeValidationClass('telephone') ?>" />
         </div>
     </div>
 </li>
